--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "taskList from udemy",
   "main": "app.js",
   "dependencies": {
+    "animejs": "^3.0.1",
+    "apexcharts": "^3.8.2",
     "mongoose": "^5.6.4"
   },
   "devDependencies": {
+    "electron": "^5.0.6",
     "eslint": "^6.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
